Move rest to a module (#2)
This is a fairly significant refactoring to move RestController and related classes into a 
plugin (or module).

I used Claude Code to help with the hardest part of shifting the processing of "REST" 
requests from AbstractHttpServerTransport (which remains in core) into RestController.

---------

Signed-off-by: Michael Froh <msfroh@apache.org>