@@ -38,12 +38,9 @@ import org.apache.lucene.util.Constants;
 import org.opensearch.Build;
 import org.opensearch.OpenSearchException;
 import org.opensearch.action.ActionModule;
-import org.opensearch.action.ActionType;
-import org.opensearch.action.support.TransportAction;
 import org.opensearch.bootstrap.BootstrapCheck;
 import org.opensearch.bootstrap.BootstrapContext;
 import org.opensearch.cluster.node.DiscoveryNode;
-import org.opensearch.cluster.node.DiscoveryNodes;
 import org.opensearch.common.Nullable;
 import org.opensearch.common.Randomness;
 import org.opensearch.common.SetOnce;
@@ -82,9 +79,9 @@ import org.opensearch.plugins.CircuitBreakerPlugin;
 import org.opensearch.plugins.NetworkPlugin;
 import org.opensearch.plugins.Plugin;
 import org.opensearch.plugins.PluginInfo;
+import org.opensearch.plugins.PluginResources;
 import org.opensearch.plugins.PluginsService;
 import org.opensearch.plugins.SecureSettingsFactory;
-import org.opensearch.rest.RestController;
 import org.opensearch.tasks.Task;
 import org.opensearch.tasks.TaskCancellationService;
 import org.opensearch.tasks.TaskResourceTrackingService;
@@ -97,7 +94,6 @@ import org.opensearch.transport.Transport;
 import org.opensearch.transport.TransportInterceptor;
 import org.opensearch.transport.TransportService;
 import org.opensearch.transport.client.node.NodeClient;
-import org.opensearch.usage.UsageService;
 
 import java.io.Closeable;
 import java.io.IOException;
@@ -106,7 +102,6 @@ import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
-import java.util.Map;
 import java.util.Optional;
 import java.util.Random;
 import java.util.Set;
@@ -264,9 +259,13 @@ public class Node implements Closeable {
                     .flatMap(Function.identity())
                     .collect(toList())
             );
+
             Collection<Object> pluginComponents = pluginsService.filterPlugins(Plugin.class)
                 .stream()
-                .flatMap(p -> p.createComponents(threadPool, xContentRegistry, environment, namedWriteableRegistry).stream())
+                .flatMap(
+                    p -> p.createComponents(new PluginResources(xContentRegistry, namedWriteableRegistry, environment, threadPool, client))
+                        .stream()
+                )
                 .toList();
             ModulesBuilder modules = new ModulesBuilder();
             // plugin modules must be added here, before others or we can get crazy injection errors...
@@ -283,22 +282,11 @@ public class Node implements Closeable {
                 settingsModule.getClusterSettings()
             );
             resourcesToClose.add(circuitBreakerService);
+            PageCacheRecycler pageCacheRecycler = createPageCacheRecycler(settings);
+            BigArrays bigArrays = createBigArrays(pageCacheRecycler, circuitBreakerService);
 
-            final UsageService usageService = new UsageService();
-            ActionModule actionModule = new ActionModule(
-                settings,
-                settingsModule.getClusterSettings(),
-                settingsModule.getSettingsFilter(),
-                threadPool,
-                pluginsService.filterPlugins(ActionPlugin.class),
-                client,
-                circuitBreakerService,
-                usageService
-            );
+            ActionModule actionModule = new ActionModule(pluginsService.filterPlugins(ActionPlugin.class));
             modules.add(actionModule);
-
-            final PageCacheRecycler pageCacheRecycler = createPageCacheRecycler(settings);
-            final BigArrays bigArrays = createBigArrays(pageCacheRecycler, circuitBreakerService);
 
             final Tracer tracer = NoopTracer.INSTANCE;
             final Collection<SecureSettingsFactory> secureSettingsFactories = pluginsService.filterPlugins(Plugin.class)
@@ -307,7 +295,6 @@ public class Node implements Closeable {
                 .filter(Optional::isPresent)
                 .map(Optional::get)
                 .collect(Collectors.toList());
-            final RestController restController = actionModule.getRestController();
             final NetworkModule networkModule = new NetworkModule(
                 settings,
                 pluginsService.filterPlugins(NetworkPlugin.class),
@@ -318,7 +305,6 @@ public class Node implements Closeable {
                 namedWriteableRegistry,
                 xContentRegistry,
                 networkService,
-                restController,
                 settingsModule.getClusterSettings(),
                 tracer,
                 Collections.emptyList(),
@@ -367,17 +353,13 @@ public class Node implements Closeable {
                 .filter(p -> p instanceof LifecycleComponent)
                 .map(p -> (LifecycleComponent) p)
                 .collect(Collectors.toList());
-            pluginLifecycleComponents.addAll(
-                pluginsService.getGuiceServiceClasses().stream().map(injector::getInstance).collect(Collectors.toList())
-            );
+            pluginLifecycleComponents.addAll(pluginsService.getGuiceServiceClasses().stream().map(injector::getInstance).toList());
             resourcesToClose.addAll(pluginLifecycleComponents);
             this.pluginLifecycleComponents = Collections.unmodifiableList(pluginLifecycleComponents);
             ActionModule.DynamicActionRegistry dynamicActionRegistry = actionModule.getDynamicActionRegistry();
-            dynamicActionRegistry.registerUnmodifiableActionMap(injector.getInstance(new Key<Map<ActionType, TransportAction>>() {
+            dynamicActionRegistry.registerUnmodifiableActionMap(injector.getInstance(new Key<>() {
             }));
             client.initialize(dynamicActionRegistry, () -> nodeId, namedWriteableRegistry);
-            logger.debug("initializing HTTP handlers ...");
-            actionModule.initRestHandlers(() -> DiscoveryNodes.builder().build());
             logger.info("initialized");
         } catch (Exception ex) {
             throw new OpenSearchException("failed to bind service", ex);
@@ -388,14 +370,9 @@ public class Node implements Closeable {
         }
     }
 
-    public static final Setting<String> BREAKER_TYPE_KEY = new Setting<>("indices.breaker.type", "hierarchy", (s) -> {
-        switch (s) {
-            case "hierarchy":
-            case "none":
-                return s;
-            default:
-                throw new IllegalArgumentException("indices.breaker.type must be one of [hierarchy, none] but was: " + s);
-        }
+    public static final Setting<String> BREAKER_TYPE_KEY = new Setting<>("indices.breaker.type", "hierarchy", (s) -> switch (s) {
+        case "hierarchy", "none" -> s;
+        default -> throw new IllegalArgumentException("indices.breaker.type must be one of [hierarchy, none] but was: " + s);
     }, Setting.Property.NodeScope);
 
     /**
@@ -528,7 +505,7 @@ public class Node implements Closeable {
     );
 
     public static String generateNodeId(Settings settings) {
-        Random random = Randomness.get(settings, NODE_ID_SEED_SETTING);
+        Random random = NODE_ID_SEED_SETTING.exists(settings) ? new Random(NODE_ID_SEED_SETTING.get(settings)) : Randomness.get();
         return UUIDs.randomBase64UUID(random);
     }
 
